--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -25,11 +25,30 @@ commands:
     permission: blockhunt.adm
   bh:
     usage: |
-     §с/<command> §b<kick> <Игрок> [Причина]
-     §с/<command> §b<kickall> <Мир> [Причина]
+     "§с/<command> §b<kick> <Игрок> [Причина]"
+     "§с/<command> §b<kickall> <Мир> [Причина]"
     permission: blockhunt.kick
   op:
     usage: /<command> <player>
   deop:
     usage: /<command> <player>
+
+
+permissions:
+    blockhunt.*:
+      default: false
+      children:
+        blockhunt.chat:
+          default: op
+        blockhunt.adm:
+          default: op
+        blockhunt.kick.*:
+          default: op
+          children:
+            blockhunt.kick:
+              default: op
+            blockhunt.kick.bypass:
+              default: false
+
+
 
