--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -25,8 +25,8 @@ commands:
     permission: blockhunt.adm
   bh:
     usage: |
-     "§с/<command> §b<kick> <Игрок> [Причина]"
-     "§с/<command> §b<kickall> <Мир> [Причина]"
+     §с/<command> §b<kick> <Игрок> [Причина]
+     §с/<command> §b<kickall> <Мир> [Причина]
     permission: blockhunt.kick
   op:
     usage: /<command> <player>
