--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,30 +1,31 @@
-NoPermission: "&3[&6Прятки&3] &cНет Прав!"
-InvalidCommand: "&3[&6Прятки&3] &cКоманда неверно записана!"
-ChatOn: "&3[&6Прятки&3] &cЧат включен!"
-ChatOff: "&3[&6Прятки&3] &cЧат выключен!"
-ChatOnSucces: "&3[&6Прятки&3] &cЧат был успешно включен."
-ChatOffSucces: "&3[&6Прятки&3] &cЧат был успешно выключен."
-ChatAlreadyEnabled:  "&3[&6Прятки&3] &cЧат уже включен."
+prefix: "&3[&6Прятки&3]"
+NoPermission:  "&cНет прав!"
+InvalidCommand: "&cКоманда неверно записана!"
+ChatOn: "&cЧат включен!"
+ChatOff: "&cЧат выключен!"
+ChatOnSucces: "&cЧат был успешно включен."
+ChatOffSucces: "&cЧат был успешно выключен."
+ChatAlreadyEnabled: "&cЧат уже включен."
 Message_On_Enable: "&aGet out of my board!."
-CfgReloaded: "&3[&6Прятки&3] &cФайл конфигурации был перезагружен."
-ItemChange: "&3[&6Прятки&3] &cНе в этот раз, дружок!"
-CashGive: "&3[&6Прятки&3] &aВы получили %CASH% коинов."
-CashGiven: "&3[&6Прятки&3] &aВыдано %CASH% коинов игроку: &2%PLAYER%."
-PlayerInWorld: "&3[&6Прятки&3] &aИгрок %PLAYER% &aсейчас в мире %WORLD%."
-PlayerOffline: "&3[&6Прятки&3] &aИгрок не найден или оффлайн."
-TargetBypass: "&3[&6Прятки&3] &cНельзя кикнуть этого игрока!"
-KickMessage: "&3[&6Прятки&3] &cВас кикнули из игры"
-KickMessageAndReason: "&3[&6Прятки&3] &cВас кикнули из игры \n&3[&6Прятки&3] &cПричина: &6%REASON%"
-SenderMessage: "&3[&6Прятки&3] &2Вы успешно кикнули игрока §a%PLAYER% &2из игры."
+CfgReloaded: "&&cФайл конфигурации был перезагружен."
+ItemChange: "&cНе в этот раз, дружок!"
+CashGive: "&aВы получили %CASH% коинов."
+CashGiven: "&aВыдано %CASH% коинов игроку: &2%PLAYER%."
+PlayerInWorld: "&aИгрок %PLAYER% &aсейчас в мире %WORLD%."
+PlayerOffline: "&aИгрок не найден или оффлайн."
+TargetBypass: "&cНельзя кикнуть этого игрока!"
+KickMessage: "&cВас кикнули из игры"
+KickMessageAndReason: "&cВас кикнули из игры \n&cПричина: &6%REASON%"
+SenderMessage: "&2Вы успешно кикнули игрока §a%PLAYER% &2из игры."
 KickLog: "&a%PLAYER% &2был исключен игроком %SENDER%. &aПричина: %REASON%"
-WorldNotFound: "&3[&6Прятки&3] &cМир не найден!"
-KickSuccess: "&3[&6Прятки&3] &cВсе игроки были успешно исключены из мира: &5%WORLD% &cигроком &5%SENDER%."
-NoCoins: "&3[&6Прятки&3] &cНедостаточно коинов для обмена!"
-CoinsRemove: "&3[&6Прятки&3] &3%COINS% коинов снято с Вашего аккаунта."
-MoneyRemove: "&3[&6Прятки&3] &a%MONEY% было снято с вашего аккаунта."
-PlayerCoinsMsg: "&3[&6Прятки&3] &aВы получили %COINS% коинов"
-SenderCoinsMsg: "&3[&6Прятки&3] &3Выдано %COINS% коинов игроку: %PLAYER%."
+WorldNotFound: "&cМир не найден!"
+KickSuccess: "&cВсе игроки были успешно исключены из мира: &5%WORLD% &cигроком &5%SENDER%."
+NoCoins: "&cНедостаточно коинов для обмена!"
+CoinsRemove: "&3%COINS% коинов снято с Вашего аккаунта."
+MoneyRemove: "&a%MONEY% было снято с вашего аккаунта."
+PlayerCoinsMsg: "&aВы получили %COINS% коинов"
+SenderCoinsMsg: "&3Выдано %COINS% коинов игроку: %PLAYER%."
 ChatPerWorldFormat: "&5[%WORLD%] %PLAYER_NAME%&6: %MESSAGE%"
-GgInSpecWithMoney: "&3[&6Прятки&3] &cНельзя использовать в режиме спектатора! За это было снято 50 коинов!"
-GgInSpec: "&3[&6Прятки&3] &cНельзя использовать в режиме спектатора!"
-GgLog: "&3[&6Прятки&3] &aИгрок &c%PLAYER% &a§aиспользовал 'gg' в режиме спектатора"
+GgInSpecWithMoney: "&cНельзя использовать в режиме спектатора! За это было снято 50 коинов!"
+GgInSpec: "&cНельзя использовать в режиме спектатора!"
+GgLog: "&aИгрок &c%PLAYER% &a§aиспользовал 'gg' в режиме спектатора"
