--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,7 +7,7 @@ ChatOnSucces: "&cЧат был успешно включен."
 ChatOffSucces: "&cЧат был успешно выключен."
 ChatAlreadyEnabled: "&cЧат уже включен."
 Message_On_Enable: "&aGet out of my board!."
-CfgReloaded: "&&cФайл конфигурации был перезагружен."
+CfgReloaded: "&cФайл конфигурации был перезагружен."
 ItemChange: "&cНе в этот раз, дружок!"
 CashGive: "&aВы получили %CASH% коинов."
 CashGiven: "&aВыдано %CASH% коинов игроку: &2%PLAYER%."
