--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,5 @@
 prefix: "&3[&6Прятки&3]"
+# Изменения префикса вступают в силу только после перезагрузки
 NoPermission:  "&cНет прав!"
 InvalidCommand: "&cКоманда неверно записана!"
 ChatOn: "&cЧат включен!"
@@ -28,4 +29,4 @@ SenderCoinsMsg: "&3Выдано %COINS% коинов игроку: %PLAYER%."
 ChatPerWorldFormat: "&5[%WORLD%] %PLAYER_NAME%&6: %MESSAGE%"
 GgInSpecWithMoney: "&cНельзя использовать в режиме спектатора! За это было снято 50 коинов!"
 GgInSpec: "&cНельзя использовать в режиме спектатора!"
-GgLog: "&aИгрок &c%PLAYER% &a§aиспользовал 'gg' в режиме спектатора"
+GgLog: "&aИгрок &c%PLAYER% &aиспользовал gg в режиме спектатора"
