--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,11 +8,11 @@ ChatOnSucces: "&cЧат был успешно включен."
 ChatOffSucces: "&cЧат был успешно выключен."
 ChatAlreadyEnabled: "&cЧат уже включен."
 Message_On_Enable: "&aGet out of my board!."
-CfgReloaded: "&cФайл конфигурации был перезагружен."
+CfgReloaded: "&cФайл конфигурации был успешно перезагружен."
 ItemChange: "&cНе в этот раз, дружок!"
 CashGive: "&aВы получили %CASH% коинов."
 CashGiven: "&aВыдано %CASH% коинов игроку: &2%PLAYER%."
-PlayerInWorld: "&aИгрок %PLAYER% &aсейчас в мире %WORLD%."
+PlayerInWorld: "&aИгрок %PLAYER%8a сейчас в мире %WORLD%."
 PlayerOffline: "&aИгрок не найден или оффлайн."
 TargetBypass: "&cНельзя кикнуть этого игрока!"
 KickMessage: "&cВас кикнули из игры"
