--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,9 +4,10 @@ NoPermission:  "&cНет прав!"
 InvalidCommand: "&cКоманда неверно записана!"
 ChatOn: "&cЧат включен!"
 ChatOff: "&cЧат выключен!"
-ChatOnSucces: "&cЧат был успешно включен."
-ChatOffSucces: "&cЧат был успешно выключен."
-ChatAlreadyEnabled: "&cЧат уже включен."
+ChatOnSuccess: "&cЧат был успешно включен."
+ChatOffSuccess: "&cЧат был успешно выключен."
+ChatAlreadyEnabled: "&cЧат уже включен!"
+ChatAlreadyDisabled: "&cЧат уже был выключен!"
 Message_On_Enable: "&aGet out of my board!."
 CfgReloaded: "&cФайл конфигурации был успешно перезагружен."
 ItemChange: "&cНе в этот раз, дружок!"
@@ -19,6 +20,7 @@ KickMessage: "&cВас кикнули из игры"
 KickMessageAndReason: "&cВас кикнули из игры \n&cПричина: &6%REASON%"
 SenderMessage: "&2Вы успешно кикнули игрока §a%PLAYER% &2из игры."
 KickLog: "&a%PLAYER% &2был исключен игроком %SENDER%. &aПричина: %REASON%"
+KickLogWorld: "&aВсе из мира &5%WORLD%&a были исключены игроком %SENDER%. &aПричина: %REASON%"
 WorldNotFound: "&cМир не найден!"
 KickSuccess: "&cВсе игроки были успешно исключены из мира: &5%WORLD% &cигроком &5%SENDER%."
 NoCoins: "&cНедостаточно коинов для обмена!"
@@ -26,7 +28,7 @@ CoinsRemove: "&3%COINS% коинов снято с Вашего аккаунта
 MoneyRemove: "&a%MONEY% было снято с вашего аккаунта."
 PlayerCoinsMsg: "&aВы получили %COINS% коинов"
 SenderCoinsMsg: "&3Выдано %COINS% коинов игроку: %PLAYER%."
-ChatPerWorldFormat: "&5[%WORLD%] %PLAYER_NAME%&6: %MESSAGE%"
+ChatPerWorldFormat: "&7[%WORLD%] %PLAYER_NAME%&6: %MESSAGE%"
 GgInSpecWithMoney: "&cНельзя использовать в режиме спектатора! За это было снято 50 коинов!"
 GgInSpec: "&cНельзя использовать в режиме спектатора!"
 GgLog: "&aИгрок &c%PLAYER% &aиспользовал gg в режиме спектатора"
