--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -29,9 +29,9 @@ permissions:
               default: op
             blockhunt.kick.bypass:
               default: false
-        blockhunt.togglechat:
-          default: op
         blockhunt.reloadconfig:
+          default: op
+        blockhunt.togglechat:
           default: op
 
 
@@ -55,21 +55,16 @@ commands:
     permission: blockhunt.adm
   bh:
     usage: |
-     §с/<command> §b<kick> <Игрок> [Причина]
-     §с/<command> §b<kickall> <Мир> [Причина]
-     §с/<command> §breload
+      /<command> §b<kick> <Игрок> [Причина]
+      /<command> §b<kickall> <Мир> [Причина]
+      /<command>§b reload
+      /<command>§b chat on/off/info
     permission: blockhunt.kick.other
   op:
     usage: /<command> <player>
   deop:
     usage: /<command> <player>
-  chat:
-    usage: |
-      §b/<command> on §e-> §b Включить чат на миры
-      §b/<command> off §e-> §b Выключить чат на миры
-      §b/<command> toggle §e-> §b Переключить чат на миры
-      §b/<command> info §e-> §b Узнать состояние чата
-    permission: blockhunt.togglechat
+
 
 
 
