--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,9 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
-group 'ru.mclcgendary.tfix'
-version '4.5'
+group 'ru.mclcgendary.blockhunt'
+version '4.6'
 
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -32,7 +31,6 @@ dependencies {
     implementation fileTree(dir: "C:\\Libs\\IConomy.jar", include: "*.jar")
 }
 
-targetCompatibility = 1.8
 
 idea {
     module {
