--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,6 +20,7 @@ KickMessage: "&cВас кикнули из игры"
 KickMessageAndReason: "&cВас кикнули из игры \n&cПричина: &6%REASON%"
 SenderMessage: "&2Вы успешно кикнули игрока §a%PLAYER% &2из игры."
 KickLog: "&a%PLAYER% &2был исключен игроком %SENDER%. &aПричина: %REASON%"
+KickLogOps: "&a%PLAYER% &2был исключен игроком %SENDER%. &aПричина: %REASON%"
 KickLogWorld: "&aВсе из мира &5%WORLD%&a были исключены игроком %SENDER%. &aПричина: %REASON%"
 WorldNotFound: "&cМир не найден!"
 KickSuccess: "&cВсе игроки были успешно исключены из мира: &5%WORLD% &cигроком &5%SENDER%."
