--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
+
 plugins {
-    id 'java'
     id 'idea'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'com.github.johnrengelman.shadow' version '2.0.4'
@@ -22,10 +22,8 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compileOnly "org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT"
-    compileOnly "net.md-5:bungeecord-api:1.12-SNAPSHOT"
+    compile 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compile "org.jetbrains.kotlin:kotlin-stdlib"
     implementation fileTree(dir: "C:\\Libs\\HideAndSeek.jar", include: "*.jar")
     implementation fileTree(dir: "C:\\Libs\\FeatherBoard.jar", include: "*.jar")
     implementation fileTree(dir: "C:\\Libs\\IConomy.jar", include: "*.jar")
@@ -39,6 +37,7 @@ idea {
     }
 }
 
+
 shadowJar {
     dependencies {
         include(dependency("org.jetbrains.kotlin:kotlin-stdlib"))
@@ -46,6 +45,7 @@ shadowJar {
         from "resources\\plugin.yml"
     }
 }
+
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
