--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,6 +22,8 @@ permissions:
               default: false
         blockhunt.reloadconfig:
           default: op
+        blockhunt.where:
+          description: Access for "Where" command
 
 
 
